<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.navigation.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/button_padding"
        android:paddingEnd="@dimen/button_padding">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <ImageView
            android:id="@+id/profile_tex"
            android:layout_width="367dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profile_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile_image_3" />

        <TextView
            android:id="@+id/Name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="#009688"
            android:fontFamily="@font/roboto"
            android:text="@string/s_name"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Nickname_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Nickname_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="#009688"
            android:fontFamily="@font/roboto"
            android:text="@string/S_nickname"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/profile_tex" />

        <TextView
            android:id="@+id/aboutme_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#009688"
            android:fontFamily="@font/roboto"
            android:text="@string/S_aboutme"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name_text" />

        <TextView
            android:id="@+id/real_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ss_name"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/real_nickname"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/real_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ss_nickname"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/Nickname_text" />

        <TextView
            android:id="@+id/real_aboutme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ss_aboutme"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutme_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>